name:           crypto-api
version:        0.6.4
license:        BSD3
license-file:   LICENSE
copyright:      Thomas DuBuisson <thomas.dubuisson@gmail.com>, Francisco Blas Izquierdo Riera (klondike) (see AUTHORS)
author:         Thomas DuBuisson <thomas.dubuisson@gmail.com>, Francisco Blas Izquierdo Riera (klondike)
maintainer:     Thomas DuBuisson <thomas.dubuisson@gmail.com>
description:    A generic interface for cryptographic operations,
                platform independent quality RNG
                and a basic benchmark infrastructure.

                Maintainers of hash and cipher implementations are
                encouraged to add instances for the classes defined
                in Crypto.Classes.  Crypto users are similarly
                encouraged to use the interfaces defined in the Classes
                module.

                Any concepts or functions of general use to more than
                one cryptographic algorithm (ex: padding) is within
                scope of this package.
synopsis:       A generic interface for cryptographic operations
category:       Data, Cryptography
homepage:       http://trac.haskell.org/crypto-api/wiki
bug-reports:    http://trac.haskell.org/crypto-api/report/1
stability:      stable
build-type:     Simple
cabal-version:  >= 1.6
tested-with:    GHC == 7.0.3


flag benchmarks
  description: Include benchmarking tools for cryptographic operations
  default: False

Library
  Build-Depends: base == 4.*,
                 bytestring >= 0.9 && < 0.10,
                 cereal >= 0.2 && < 0.4,
                 tagged >= 0.1 && < 0.3,
                 largeword >= 1.0.0, array, entropy
  ghc-options:
  hs-source-dirs:
  exposed-modules: Crypto.Classes, Crypto.Types, Crypto.HMAC, Crypto.Modes, Crypto.Random, Crypto.Padding, System.Crypto.Random
  other-modules: Crypto.Util, Crypto.CPoly
  if flag(benchmarks)
    exposed-modules: Benchmark.Crypto
    build-depends: criterion >= 0.5, deepseq
source-repository head
    type:     darcs
    location: http://code.haskell.org/crypto-api
